--- a/guide/index.html
+++ b/guide/index.html
@@ -134,8 +134,28 @@
                                         <section class="section " id="docs-bhexpress-api-client-php">
             <h1>Docs: bhexpress-api-client-php</h1>
 
+            <a href="https://github.com/bhexpress/bhexpress-api-client-php/actions/workflows/ci.yml?query=branch%3Amaster"><img
+    src="https://github.com/bhexpress/bhexpress-api-client-php/actions/workflows/ci.yml/badge.svg?branch=master&amp;event=push"
+                        />
+</a>
+            <a href="https://scrutinizer-ci.com/g/bhexpress/bhexpress-api-client-php/"><img
+    src="https://scrutinizer-ci.com/g/bhexpress/bhexpress-api-client-php/badges/quality-score.png?b=master"
+                        />
+</a>
+            <a href="https://scrutinizer-ci.com/g/bhexpress/bhexpress-api-client-php/"><img
+    src="https://scrutinizer-ci.com/g/bhexpress/bhexpress-api-client-php/badges/coverage.png?b=master"
+                        />
+</a>
             <a href="https://packagist.org/packages/bhexpress/bhexpress-api-client"><img
     src="https://poser.pugx.org/bhexpress/bhexpress-api-client/license"
+                        />
+</a>
+            <a href="https://app.fossa.com/projects/git%2Bgithub.com%2FBHExpress%2Fbhexpress-api-client-php?ref=badge_shield&amp;issueType=license"><img
+    src="https://app.fossa.com/api/projects/git%2Bgithub.com%2FBHExpress%2Fbhexpress-api-client-php.svg?type=shield&amp;issueType=license"
+                        />
+</a>
+            <a href="https://app.fossa.com/projects/git%2Bgithub.com%2FBHExpress%2Fbhexpress-api-client-php?ref=badge_shield&amp;issueType=security"><img
+    src="https://app.fossa.com/api/projects/git%2Bgithub.com%2FBHExpress%2Fbhexpress-api-client-php.svg?type=shield&amp;issueType=security"
                         />
 </a>
             <a href="https://packagist.org/packages/bhexpress/bhexpress-api-client"><img
