--- a/indices/files.html
+++ b/indices/files.html
@@ -135,10 +135,23 @@
         <h2 class="phpdocumentor-content__title">Files</h2>
                                             <h3>A</h3>
             <ul class="phpdocumentor-list">
+                            <li><a href="files/src-apibase.html"><abbr title="src/ApiBase.php">ApiBase.php</abbr></a></li>
                             <li><a href="files/src-apiclient.html"><abbr title="src/ApiClient.php">ApiClient.php</abbr></a></li>
                             <li><a href="files/src-apiexception.html"><abbr title="src/ApiException.php">ApiException.php</abbr></a></li>
                         </ul>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        </section>
+                                                        <h3>B</h3>
+            <ul class="phpdocumentor-list">
+                            <li><a href="files/src-bhe-bhe.html"><abbr title="src/bhe/Bhe.php">Bhe.php</abbr></a></li>
+                        </ul>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        <h3>R</h3>
+            <ul class="phpdocumentor-list">
+                            <li><a href="files/src-bhe-receptores.html"><abbr title="src/bhe/Receptores.php">Receptores.php</abbr></a></li>
+                        </ul>
+                                                        <h3>S</h3>
+            <ul class="phpdocumentor-list">
+                            <li><a href="files/src-bhe-servicios.html"><abbr title="src/bhe/Servicios.php">Servicios.php</abbr></a></li>
+                        </ul>
+                                                                                                                                                                                                                                                        </section>
                             </div>
             <section data-search-results class="phpdocumentor-search-results phpdocumentor-search-results--hidden">
     <section class="phpdocumentor-search-results__dialog">
